--- a/admin/tabs/general/alertBanner/AlertBannerPanel.scss
+++ b/admin/tabs/general/alertBanner/AlertBannerPanel.scss
@@ -53,7 +53,24 @@
     }
 
     .xh-placeholder {
-      background-color: var(--xh-bg-alt);
+      background-color: var(--xh-intent-primary-l1);
+    }
+  }
+
+  &__client-app-cell-container {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    max-width: 400px;
+    flex-wrap: wrap;
+    row-gap: 4px;
+
+    li {
+      padding: 2px 4px;
+      margin: 0 2px;
+      border-radius: var(--xh-border-radius-px);
+      background-color: var(--xh-intent-neutral);
+      font-size: var(--xh-font-size-small-em);
     }
   }
 
