migrates add preset outside menu, adds fixed width to menu to dropdown

--- a/admin/tabs/general/alertBanner/AlertBannerPanel.scss
+++ b/admin/tabs/general/alertBanner/AlertBannerPanel.scss
@@ -57,6 +57,11 @@
     }
   }
 
+  &__menu-item {
+    width: 360px;
+    min-width: 0;
+  }
+
   &__client-app-cell-container {
     display: flex;
     list-style-type: none;
