--- a/styles/XH.scss
+++ b/styles/XH.scss
@@ -63,6 +63,12 @@ body.xh-app {
     cursor: pointer;
   }
 
+  .xh-text-overflow-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
   // Avoid default select / magnify behaviors on touch-screens
   &.xh-mobile,
   &.xh-tablet {
