--- a/admin/tabs/general/alertBanner/AlertBannerPanel.scss
+++ b/admin/tabs/general/alertBanner/AlertBannerPanel.scss
@@ -60,6 +60,12 @@
   &__menu-item {
     width: 360px;
     min-width: 0;
+
+    span {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
   }
 
   &__client-app-cell-container {
