--- a/admin/tabs/general/alertBanner/AlertBannerPanel.scss
+++ b/admin/tabs/general/alertBanner/AlertBannerPanel.scss
@@ -53,7 +53,35 @@
     }
 
     .xh-placeholder {
-      background-color: var(--xh-bg-alt);
+      background-color: var(--xh-intent-primary-l1);
+    }
+  }
+
+  &__menu-item {
+    width: 360px;
+    min-width: 0;
+
+    span {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+  }
+
+  &__client-app-cell-container {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    max-width: 400px;
+    flex-wrap: wrap;
+    row-gap: 4px;
+
+    li {
+      padding: 2px 4px;
+      margin: 0 2px;
+      border-radius: var(--xh-border-radius-px);
+      background-color: var(--xh-intent-neutral);
+      font-size: var(--xh-font-size-small-em);
     }
   }
 
