--- a/admin/tabs/general/roles/editor/RoleEditor.scss
+++ b/admin/tabs/general/roles/editor/RoleEditor.scss
@@ -1,6 +1,5 @@
 .xh-admin-role-editor {
-  height: 600px;
-  width: 850px;
-  max-height: 90vh;
-  max-width: 90vw;
+  height: 80vh;
+  width: 80vw;
+  max-width: 1500px;
 }
