--- a/admin/differ/Differ.scss
+++ b/admin/differ/Differ.scss
@@ -10,10 +10,8 @@
   max-height: 80vh;
   table {
     display: flex;
-    width: 100%;
     border-collapse: collapse;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
 
     tr {
       border-bottom: var(--xh-border-solid);
