Readds overflow-x rule

--- a/admin/differ/Differ.scss
+++ b/admin/differ/Differ.scss
@@ -12,6 +12,7 @@
     display: flex;
     border-collapse: collapse;
     overflow-y: auto;
+    overflow-x: hidden;
 
     tr {
       border-bottom: var(--xh-border-solid);
