--- a/cmp/dataview/DataView.scss
+++ b/cmp/dataview/DataView.scss
@@ -24,9 +24,9 @@
       background-color: var(--xh-bg);
     }
 
-    // Header height fixed to zero - avoid 1px border creating a gap at top of grid.
+    // Header always hidden in DVs.
     .ag-header {
-      border: none;
+      display: none;
     }
 
     // Always suppress agGrid-provided horizontal scrollbar - we never want it for DVs.
