hide-headers css can be simplified.

--- a/cmp/ag-grid/AgGrid.scss
+++ b/cmp/ag-grid/AgGrid.scss
@@ -66,8 +66,7 @@
     }
   }
   &--hide-headers .ag-header {
-    border-bottom-width: 0;
-    min-height: 0 !important;
+    display: none;
   }
 
   //------------------------
