feat(hoist-react): monitor results panel supports multi-instance status monitor results

--- a/admin/tabs/monitor/Tile.scss
+++ b/admin/tabs/monitor/Tile.scss
@@ -59,6 +59,27 @@
     }
   }
 
+  &__instance-result-block {
+    overflow-y: auto;
+    border-width: 1.5px;
+    border-style: solid;
+    border-color: var(--xh-gray-dark);
+    width: 50%;
+    margin-top: 5%;
+    margin-left: 5%;
+  }
+
+  &__instance-result {
+    padding: var(--xh-pad-px);
+
+    svg {
+      position: relative;
+      right: 0;
+      bottom: 0;
+      opacity: 1;
+    }
+  }
+
   &__message {
     flex: 1;
     margin-top: var(--xh-pad-px);
