add masterOnly field to monitor editor panel and refactor Tile to display instance results

--- a/admin/tabs/monitor/Tile.scss
+++ b/admin/tabs/monitor/Tile.scss
@@ -61,9 +61,9 @@
 
   &__instance-result-block {
     overflow-y: auto;
-    border-width: 1.5px;
-    border-style: solid;
-    border-color: var(--xh-gray-dark);
+    //border-width: 1.5px;
+    //border-style: solid;
+    //border-color: var(--xh-gray-dark);
     width: 50%;
     margin-top: 5%;
     margin-left: 5%;
