Ag-Grid 31 css fixes:  - remove spacing under floating-top by setting box-sizing: content-box;  - dataview: remove spacing under header by setting header to display: none;

--- a/cmp/dataview/DataView.scss
+++ b/cmp/dataview/DataView.scss
@@ -26,7 +26,7 @@
 
     // Header height fixed to zero - avoid 1px border creating a gap at top of grid.
     .ag-header {
-      border: none;
+      display: none;
     }
 
     // Always suppress agGrid-provided horizontal scrollbar - we never want it for DVs.
