--- a/admin/tabs/monitor/Tile.scss
+++ b/admin/tabs/monitor/Tile.scss
@@ -8,94 +8,54 @@
 .xh-status-tile {
   color: white;
   border: var(--xh-border-solid);
-  overflow: hidden;
 
   .xh-dark & {
     border-color: white;
   }
 
   &-ok {
+    background: var(--xh-intent-success-darker);
     --xh-panel-title-bg: var(--xh-intent-success-darker);
     --xh-panel-bg: var(--xh-intent-success);
   }
 
   &-warn {
+    background: var(--xh-intent-warning-darker);
     --xh-panel-title-bg: var(--xh-intent-warning-darker);
     --xh-panel-bg: var(--xh-intent-warning);
   }
 
   &-fail {
-    --xh-panel-title-bg: var(--xh-intent-danger);
-    --xh-panel-bg: var(--xh-intent-danger-darker);
+    background: var(--xh-intent-danger-darker);
+    --xh-panel-title-bg: var(--xh-intent-danger-darker);
+    --xh-panel-bg: var(--xh-intent-danger);
   }
 
   &-inactive {
+    background: var(--xh-gray-dark);
     --xh-panel-title-bg: var(--xh-gray);
     --xh-panel-bg: var(--xh-gray-dark);
   }
 
   &-unknown {
+    background: var(--xh-gray-dark);
     --xh-panel-title-bg: var(--xh-gray);
     --xh-panel-bg: var(--xh-gray-dark);
-  }
-
-  &__name {
-    padding: var(--xh-pad-px);
-    font-size: var(--xh-font-size-large-em);
-    background-color: rgba(255, 255, 255, 0.2);
-    border-bottom: 1px solid white;
-    white-space: nowrap;
   }
 
   &__content {
     padding: var(--xh-pad-px);
     flex: 1;
-
-    svg {
-      position: absolute;
-      right: -20px;
-      bottom: 5px;
-      opacity: 0.5;
-    }
+    overflow-y: scroll;
   }
 
-  &__instance-result-block {
-    overflow-y: auto;
-    width: 75%;
-    margin-top: 10px;
+  &__instance-row {
+    padding: var(--xh-pad-half-px);
+    margin-top: 5px;
+    border-radius: 10px;
   }
 
-  &__instance-result {
-    svg {
-      position: relative;
-      right: 0;
-      bottom: 0;
-      opacity: 1;
-    }
-  }
-
-  &__instance-badge {
-    font-size: 1em;
-    font-weight: normal;
-  }
-
-  &__message {
-    flex: 1;
-    margin-top: var(--xh-pad-px);
-    overflow: auto;
-    text-overflow: ellipsis;
-    white-space: pre-wrap;
-    width: calc(100% - 90px);
-
-    @media only screen and (max-width: 1350px) {
-      width: calc(100% - 95px);
-    }
-
-    @media only screen and (max-width: 700px) {
-      width: calc(100% - 115px);
-    }
-    &::-webkit-scrollbar {
-      max-width: 4px;
-    }
+  &__instance-name {
+    font-family: monospace;
   }
 }
