Re-org admin tabsets
+ Dialog-based editors for Status Monitors and Preferences (latter now off of User Preferences)

--- a/admin/tabs/monitor/MonitorTab.scss
+++ b/admin/tabs/monitor/MonitorTab.scss
@@ -5,7 +5,7 @@
  * Copyright © 2024 Extremely Heavy Industries Inc.
  */
 
-.xh-monitor-results-panel {
+.xh-monitor-tab {
   .xh-monitor-result-count {
     align-items: center;
     .xh-icon {
