--- a/admin/App.scss
+++ b/admin/App.scss
@@ -5,7 +5,7 @@
  * Copyright © 2024 Extremely Heavy Industries Inc.
  */
 
-.xh-admin-app-frame {
+.xh-admin-app {
   .xh-tab-switcher--left,
   .xh-tab-switcher--right {
     min-width: 160px;
@@ -19,6 +19,11 @@
     .xh-tab-switcher__tab {
       line-height: 40px;
     }
+  }
+
+  &__editor-dialog {
+    height: 80vh;
+    width: 80vw;
   }
 }
 
