--- a/cmp/ag-grid/AgGrid.scss
+++ b/cmp/ag-grid/AgGrid.scss
@@ -239,6 +239,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       min-width: 0;
+      max-height: 100%;
     }
     .ag-row-group {
       align-items: center;
