--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -592,6 +592,12 @@ body {
   --xh-pad-half: calc(var(--xh-pad) * 0.5);
   --xh-pad-half-px: calc(var(--xh-pad-half) * 1px);
 
+  // Safe area values for mobile handling.
+  --xh-pad-safe-top: env(safe-area-inset-top);
+  --xh-pad-safe-bottom: env(safe-area-inset-bottom);
+  --xh-pad-safe-left: env(safe-area-inset-left);
+  --xh-pad-safe-right: env(safe-area-inset-right);
+  --xh-pad-safe-all: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 
   //------------------------
   // Panels
