Increase mobile input font-sizes to 16px to prevent auto-zoom in Safari

--- a/kit/onsen/styles.scss
+++ b/kit/onsen/styles.scss
@@ -4,7 +4,7 @@
 .xh-input {
   input,
   textarea {
-    font-size: var(--xh-font-size);
+    font-size: var(--xh-input-font-size-px);
     font-family: var(--xh-font-family);
     font-weight: 400;
     color: var(--xh-text-color);
@@ -19,7 +19,7 @@
   }
 
   &:not(.xh-input-label):not(.xh-button-group):not(.xh-switch-input):not(.xh-check-box) {
-    font-size: 14px;
+    font-size: var(--xh-input-font-size-px);
     border: var(--xh-border-solid);
     border-radius: var(--xh-border-radius-px);
 
