--- a/mobile/cmp/dialog/Dialog.scss
+++ b/mobile/cmp/dialog/Dialog.scss
@@ -10,16 +10,16 @@
   }
 
   & > .dialog {
-    // Constrain max height on the outer container.
-    // vh units are unreliable on mobile, as they don't account for address bar / navigation.
+    // Constrain max height on the outer container to safe area.
     display: flex;
     flex-direction: column;
-    max-height: calc(100% - var(--xh-pad-double-px));
+    max-height: 100svh;
 
     .dialog-container {
+      margin: var(--xh-pad-safe-all);
       display: flex;
       flex-direction: column;
-      max-width: calc(100% - var(--xh-pad-double-px));
+      max-width: 100svw;
       // Background on inner onsen container deliberately set to *border* color - this avoids small
       // but noticeable gaps around the edges. The dialog body gets a defined background below for
       // the actual contents of the component.
