Mobile Zone Grid Overflow Fix (#3645)
+ Ensure that primary metric (tr) cell overflows and clips the right (trailing) edge of the rendered value and displays an ellipsis to make it clear that its been clipped.
+ Apply ellipsis based overflow handling to right (primary metric) side only - avoids issue with left-side fields all individually compressing and truncating, but unevenly so, due to different output of text vs. element renderers.
+ Remove left padding for right column cells to maximize space for primary metric / minimize clipping.
+ Remove exported `multiFieldRenderer` - a breaking change and noted as such, but do not expect widespread use. Made internal and renamed to `zoneGridRenderer`.
+ Standardize CSS vars, rename with `--xh-zone-grid` prefix.  Break out zone grid styles into their own file.
+ Expose a few additional zone-grid specific CSS vars, change some defaults to be a bit less opinionated (allowing apps to then make their choices).
+ Add some intro/help text to zone mapper.
+ Minor style / layout refinements to (standard) mobile ColChooser

---------

Co-authored-by: Anselm McClain <atm@xh.io>

--- a/cmp/grid/Grid.scss
+++ b/cmp/grid/Grid.scss
@@ -320,40 +320,8 @@
 }
 
 //------------------------
-// Multi-field (mobile)
+// Tooltips
 //------------------------
-.xh-multifield-renderer {
-  line-height: var(--xh-grid-multifield-line-height-px);
-
-  .xh-multifield-renderer-row {
-    display: flex;
-
-    &.xh-multifield-renderer-top {
-      padding: 4px 0 0;
-      font-size: var(--xh-grid-multifield-top-font-size-px);
-    }
-
-    &.xh-multifield-renderer-bottom {
-      font-size: var(--xh-grid-multifield-bottom-font-size-px);
-      color: var(--xh-text-color-muted);
-    }
-
-    .xh-multifield-renderer-field,
-    .xh-multifield-renderer-delimiter {
-      margin: 0 2px 0 0;
-    }
-  }
-}
-
-.xh-align-right .xh-multifield-renderer .xh-multifield-renderer-row {
-  justify-content: flex-end;
-
-  .xh-multifield-renderer-field,
-  .xh-multifield-renderer-delimiter {
-    margin: 0 0 0 2px;
-  }
-}
-
 .xh-grid-tooltip {
   position: absolute;
 
