Additional explanatory comments
+ Scope xh-viewport padding to mobile only for clarity - not expected to have any effect on desktop (or be needed there)

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -593,7 +593,8 @@ body {
   --xh-pad-half: calc(var(--xh-pad) * 0.5);
   --xh-pad-half-px: calc(var(--xh-pad-half) * 1px);
 
-  // Safe area values for mobile handling.
+  // Safe area values for mobile handling - used by Viewport component and mobile dialog masks /
+  // overlays (which render outside of the viewport).
   --xh-pad-safe-top: env(safe-area-inset-top);
   --xh-pad-safe-bottom: env(safe-area-inset-bottom);
   --xh-pad-safe-left: env(safe-area-inset-left);
@@ -773,10 +774,11 @@ body {
   // Viewport
   //------------------------
     &.xh-mobile {
-      /*
-         For now on mobile, we want to constrain app content within the safe area bounds. Areas outside
-         the bounds are black.
-      */
+      // Customize the background color of "unreachable" safe areas on the phone - i.e. the space
+      // we reserve (via padding on .xh-viewport) for the iOS task switcher. Will also show through
+      // on left/right letterboxing when in landscape mode. Default to black to have these areas
+      // appear as fully "off" on modern phone screens. This looks better than white, which appears
+      // to be blank/missing/glitched, even when light theme is active.
       --xh-viewport-bg: black;
     }
 }
