--- a/cmp/layout/Viewport.scss
+++ b/cmp/layout/Viewport.scss
@@ -1,11 +1,14 @@
 .xh-viewport {
-  /* On desktop, because the viewport-fit tag isn't applied, this padding doesn't do anything (though it'd be 0 regardless) */
-  padding: var(--xh-pad-safe-all);
-
   background-color: var(--xh-viewport-bg);
   top: 0;
   left: 0;
   position: fixed;
   width: 100svw;
   height: 100svh;
+}
+
+// On mobile, this works in concert with modification to the viewport meta tag within AppContainerModel
+// to ensure that we don't allow app content to be obscured by the notch, bottom task switcher, etc.
+.xh-mobile .xh-viewport {
+  padding: var(--xh-pad-safe-all);
 }
