Add `--xh-mobile-input-height-px` CSS var

--- a/mobile/cmp/input/DateInput.scss
+++ b/mobile/cmp/input/DateInput.scss
@@ -25,7 +25,7 @@
     }
 
     .DateInput_input {
-      height: 34px;
+      height: var(--xh-mobile-input-height-px);
       padding: 0 var(--xh-pad-px);
     }
 
