--- a/mobile/cmp/input/NumberInput.scss
+++ b/mobile/cmp/input/NumberInput.scss
@@ -3,7 +3,7 @@
 
   .text-input,
   .text-input__label {
-    height: 34px;
+    height: var(--xh-mobile-input-height-px);
     padding: 0 var(--xh-pad-px);
   }
 }
